MID-7976 attempt to improve wizard, fix steps skipping, wip